--- a/Titans/Oceanus/src/main/resources/application.yml
+++ b/Titans/Oceanus/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+server:
+  port: 9998
+spring:
+  application:
+    name: Oceanus
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 5      # 心跳时间，即服务续约间隔时间（缺省为30s）生产环境最好使用默认值
@@ -6,20 +11,8 @@ eureka:
     serviceUrl:
       defaultZone: http://user:password123@localhost:8761/eureka/
 
-spring:
-  http:
-    multipart:
-      max-request-size: 50Mb
-      max-file-size: 50Mb
-hystrix:
-  command:
-    default:
-      execution:
-        timeout:
-          enabled: true
-        isolation:
-          thread:
-            timeoutInMilliseconds: 20000
-spring:
-  profiles:
-    active: oracle
+logging:
+  level:
+    root: INFO
+    org.springframework.cloud.sleuth: DEBUG
+    # org.springframework.web.servlet.DispatcherServlet: DEBUG
