--- a/Titans/fastdfs-service/src/main/resources/application.yml
+++ b/Titans/fastdfs-service/src/main/resources/application.yml
@@ -6,4 +6,8 @@ fdfs:
   thumbImage:
     height: 150
     width: 150
-  tracker-list: 192.168.29.131:22122
+  tracker-list: 192.168.16.82:22122             #192.168.29.131:22122
+  web-server-url: http://192.168.16.82:18888/
+spring:
+  profiles:
+    active: druid,oracle,thyeleaf
